# ptgp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: mypy.yml  pypi.yml  rtd-preview.yml  test.yml
conda_envs/: environment-docs.yaml  environment-test.yaml  environment.yaml
docs/: .gitignore  Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  references.bib
docs/sphinxext/: generate_gallery.py  generate_kernel_gallery.py  simplebib.py
notebooks/: decision_theory_water_mains.ipynb  demo.ipynb  gp-variational-stochastic.ipynb  watermains.ipynb  watermains.py  watermains_cv_m4_2019.pkl  watermains_cv_m4_2020.pkl  watermains_cv_m4_2021.pkl  watermains_cv_m4_2022.pkl  watermains_cv_m4_2023.pkl  watermains_cv_m4_2024.pkl  watermains_cv_m4_2025.pkl  watermains_cv_seq97_2019.pkl  watermains_cv_seq97_2020.pkl  watermains_cv_seq97_2021.pkl  watermains_cv_seq97_2022.pkl  watermains_cv_seq97_2023.pkl  watermains_cv_seq97_2024.pkl  watermains_cv_seq97_2025.pkl  watermains_plan.md
notebooks/approximations/: gp-variational-stochastic.ipynb
notebooks/dev/: final_ladder_seq97.py  m4_cv.py
notebooks/introduction/: introduction.ipynb
ptgp/: __init__.py  _cli.py  conditionals.py  idata.py  inducing.py  inducing_fourier.py  kl.py  objectives.py  plotting.py  rewrites.py  utils.py
ptgp/gp/: __init__.py  svgp.py  unapproximated.py  vfe.py  vgp.py
ptgp/kernels/: __init__.py  base.py  categorical.py  combination.py  nonstationary.py  stationary.py
ptgp/likelihoods/: __init__.py  base.py  bernoulli.py  composite.py  gaussian.py  negative_binomial.py  poisson.py  student_t.py
ptgp/linalg/: __init__.py  operator.py  ops.py
ptgp/optim/: __init__.py  api.py  training.py
scripts/: check_kernel_gallery.py  inplace_audit.py  install_claude_skills.py  joint_graph_analysis.py  run_mypy.py  setup-jupyter-mcp.sh
tests/: _svgp_ref.py  test_composite_likelihood.py  test_cubic_floor.py  test_heteroskedastic_predict.py  test_idata.py  test_inducing.py  test_inducing_fourier.py  test_kl.py  test_objectives.py  test_predict_samples.py  test_rewrites.py  test_skills_install.py  test_svgp.py  test_svgp_scipy_ref.py  test_utils.py  test_vfe.py  test_vff_e2e.py  test_vff_paths.py  test_vgp.py
tests/_fixtures/: generate_svgp_baseline.py  svgp_points_unwhitened_baseline.pkl  vff_kuu_oracle.py
tests/kernels/: test_categorical.py  test_diag.py  test_nonstationary.py  test_stationary.py
tests/likelihoods/: test_base.py  test_bernoulli.py  (+5 more)
(+67 files in other folders)
