[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ptgp"
authors = [
    {name = 'Bill Engels', email = 'w.j.engels@gmail.com'},
    {name = 'PyMC Developers', email = 'pymc.devs@gmail.com'}
]
description = "A practitioner's toolbox for estimating large-scale Gaussian Process models with PyMC and PyTensor"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "gaussian processes",
    "bayesian",
    "variational inference",
    "probabilistic programming",
    "pymc",
    "pytensor",
]
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
  "numpy",
  "pymc>=6.1.0,<6.2",
  "pytensor>=3.1.2,<3.2"
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "mypy", "polars"]

[project.urls]
Repository = "https://github.com/pymc-devs/ptgp.git"
Issues = "https://github.com/pymc-devs/ptgp/issues"

[tool.hatch.version]
source = 'vcs'

[tool.hatch.build.hooks.vcs]
version-file = "ptgp/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  '/.github',
  '/notebooks',
]

[tool.hatch.build.targets.wheel]
packages = ["ptgp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
addopts = [
  "-v",
  "--doctest-modules",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "W", "RUF"]
ignore = [
  "E501",
  "RUF001", # String contains ambiguous character (such as Greek letters)
  "RUF002", # Docstring contains ambiguous character (such as Greek letters)
  "RUF003", # Comment contains ambiguous character (such as Greek letters)
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D202",
  "D203",
  "D204",
  "D205",
  "D209",
  "D212",
  "D213",
  "D301",
  "D400",
  "D401",
  "D403",
  "D413",
  "D415",
  "D417",
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
# Notebooks are hand-formatted for teaching; don't reorganize their imports.
"*.ipynb" = ["I001", "E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
files = ["ptgp"]
